@@ -66,6 +66,7 @@
 	<file>./icons/line.png</file>
 	<file>./icons/mail.png</file>
 	<file>./icons/make-borders.png</file>
+	<file>./icons/mode-angle.png</file>
 	<file>./icons/mode-circle.png</file>
 	<file>./icons/mode-draw.png</file>
 	<file>./icons/mode-select.png</file>
